src/objects/Order_Line__c/Order_Line__c.object-meta.xml
<CustomObject>
    <label>Order Line</label>
    <nameField>
        <displayFormat>OrderLine-{0000}</displayFormat>
        <label>Order Line#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>