src/objects/Order_Line__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>If( VALUE(Aging_Days__c) &gt; 20, IMAGE(&apos;/resource/1535629670000/red&apos;,&apos;red&apos;,25,50), IMAGE(&apos;/resource/1535629399000/green&apos;,&apos;green&apos;,25,50))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging</label>
    <type>Text</type>
</CustomField>