src/objects/Order_Line__c/fields/Aging_Days__c.field-meta.xml
<CustomField>
    <fullName>Aging_Days__c</fullName>
    <formula>TEXT(Order__r.Aging_Days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Days</label>
    <type>Text</type>
</CustomField>