src/objects/Order_Line__c/fields/Backlog_Order__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Order__c</fullName>
    <description>This checkbox indicates whether or not the order should be counted as &quot;Backlog&quot; (Checked) or &quot;Actual&quot; (Unchecked)</description>
    <formula>isblank( Actual_Ship_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This checkbox indicates whether or not the order should be counted as &quot;Backlog&quot; (Checked) or &quot;Actual&quot; (Unchecked)</inlineHelpText>
    <label>Backlog Order</label>
    <type>Checkbox</type>
</CustomField>