src/objects/Order_Line__c/fields/Backlog_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Quantity__c</fullName>
    <label>Backlog Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>