src/objects/Order_Line__c/fields/Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_City__c</fullName>
    <formula>Bill_To_Location__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To City</label>
    <type>Text</type>
</CustomField>