src/objects/Order_Line__c/fields/Bill_to_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Country__c</fullName>
    <formula>Bill_To_Location__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to Country</label>
    <type>Text</type>
</CustomField>