src/objects/Order_Line__c/fields/Bill_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Lines (Bill To Location)</relationshipLabel>
    <relationshipName>Order_Lines3</relationshipName>
    <type>Lookup</type>
</CustomField>