src/objects/Order_Line__c/fields/Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Number__c</fullName>
    <formula>Bill_To_Location__r.ShippingLatitude +  Bill_To_Location__r.ShippingLongitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>