src/objects/Order_Line__c/fields/Bill_To_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_State__c</fullName>
    <formula>Bill_To_Location__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To State</label>
    <type>Text</type>
</CustomField>