src/objects/Order_Line__c/fields/Bill_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Street__c</fullName>
    <formula>Bill_To_Location__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Street</label>
    <type>Text</type>
</CustomField>