src/objects/Order_Line__c/fields/Bill_To_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Zip__c</fullName>
    <formula>Bill_To_Location__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Zip</label>
    <type>Text</type>
</CustomField>