src/objects/Order_Line__c/fields/Bill_To_Zip_pos__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Zip_pos__c</fullName>
    <label>Bill To Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>