src/objects/Order_Line__c/fields/Branch_Location_pos__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location_pos__c</fullName>
    <label>Branch Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>