src/objects/Order_Line__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>text(Part_Number__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Business Unit of the associated Part Number</inlineHelpText>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>