src/objects/Order_Line__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Ship_To_Location__r.ShippingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>