src/objects/Order_Line__c/fields/Cmi_Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Cmi_Inventory_Location__c</fullName>
    <label>Cmi Inventory Location</label>
    <length>3</length>
    <type>Text</type>
</CustomField>