src/objects/Order_Line__c/fields/Commisions__c.field-meta.xml
<CustomField>
    <fullName>Commisions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commisions</label>
    <referenceTo>Commisions__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>