src/objects/Order_Line__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <formula>TEXT( Part_Number__r.Product_Config__c )</formula>
    <label>Configuration</label>
    <type>Text</type>
</CustomField>