src/objects/Order_Line__c/fields/Contribution_Profit__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Profit__c</fullName>
    <formula>(  Unit_Selling_Price__c  -  Variable_Cost__c  )  *  Shipped_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>