src/objects/Order_Line__c/fields/Count_of_lines_with_CA_Status__c.field-meta.xml
<CustomField>
    <fullName>Count_of_lines_with_CA_Status__c</fullName>
    <label>Count of lines with CA Status</label>
    <summaryFilterItems>
        <field>Serial_Number__c.Status__c</field>
        <operation>equals</operation>
        <value>Corrective Actions</value>
    </summaryFilterItems>
    <summaryForeignKey>Serial_Number__c.Order_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>