src/objects/Order_Line__c/fields/Count_of_lines_with_Open_Status__c.field-meta.xml
<CustomField>
    <fullName>Count_of_lines_with_Open_Status__c</fullName>
    <label>Count of lines with Open Status</label>
    <summaryFilterItems>
        <field>Serial_Number__c.Status__c</field>
        <operation>equals</operation>
        <value>Open-Interim Solution-Doc Note, null</value>
    </summaryFilterItems>
    <summaryForeignKey>Serial_Number__c.Order_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>