src/objects/Order_Line__c/fields/Count_of_Serial_s__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Serial_s__c</fullName>
    <label>Count of Serial#s</label>
    <summaryForeignKey>Serial_Number__c.Order_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>