src/objects/Order_Line__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Ship_To_Location__r.ShippingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>