src/objects/Order_Line__c/fields/Current_User_is_RSM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_RSM__c</fullName>
    <description>Used to identify if the running user is an RSM</description>
    <formula>if($User.Id = RSM__c  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is RSM</label>
    <type>Checkbox</type>
</CustomField>