src/objects/Order_Line__c/fields/Cust_Po_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Cust_Po_Line_Number__c</fullName>
    <label>Cust Po Line Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>