src/objects/Order_Line__c/fields/Customer_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Item_Description__c</fullName>
    <label>Customer Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>