src/objects/Order_Line__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Lines (Customer Name)</relationshipLabel>
    <relationshipName>Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>