src/objects/Order_Line__c/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <label>Customer Part Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>