src/objects/Order_Line__c/fields/Customer_Shippable__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shippable__c</fullName>
    <label>Customer Shippable</label>
    <length>20</length>
    <type>Text</type>
</CustomField>