src/objects/Order_Line__c/fields/Cutoff_Flag__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Flag__c</fullName>
    <label>Cutoff Flag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>