src/objects/Order_Line__c/fields/Data_Rate__c.field-meta.xml
<CustomField>
    <fullName>Data_Rate__c</fullName>
    <formula>TEXT(Part_Number__r.Data_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Rate</label>
    <type>Text</type>
</CustomField>