src/objects/Order_Line__c/fields/Defect_Type__c.field-meta.xml
<CustomField>
    <fullName>Defect_Type__c</fullName>
    <label>Defect Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>