src/objects/Order_Line__c/fields/Detector__c.field-meta.xml
<CustomField>
    <fullName>Detector__c</fullName>
    <formula>TEXT(Part_Number__r.Detector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detector</label>
    <type>Text</type>
</CustomField>