src/objects/Order_Line__c/fields/Dist_Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Dist_Branch_Location__c</fullName>
    <label>Dist Branch Location</label>
    <length>240</length>
    <type>Text</type>
</CustomField>