src/objects/Order_Line__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>TEXT(Part_Number__r.Distance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance</label>
    <type>Text</type>
</CustomField>