src/objects/Order_Line__c/fields/Disti_Resale_Price__c.field-meta.xml
<CustomField>
    <fullName>Disti_Resale_Price__c</fullName>
    <label>Disti Resale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>