src/objects/Order_Line__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <formula>Order__r.End_Customer__c</formula>
    <label>End Customer</label>
    <type>Text</type>
</CustomField>