src/objects/Order_Line__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <formula>RMA_Request__r.Account.Exception__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>