src/objects/Order_Line__c/fields/Extended_Disti_Resale_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Disti_Resale_Price__c</fullName>
    <label>Extended Disti Resale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>