src/objects/Order_Line__c/fields/Extended_Valued__c.field-meta.xml
<CustomField>
    <fullName>Extended_Valued__c</fullName>
    <label>Extended_Valued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>