src/objects/Order_Line__c/fields/FA_FV__c.field-meta.xml
<CustomField>
    <fullName>FA_FV__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;/lightning/cmp/c__FAFVCustomUIQuickAction?c__recordId=&quot;+Id, &apos;FA FV&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA FV</label>
    <type>Text</type>
</CustomField>