src/objects/Order_Line__c/fields/FA_FV_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Completion_Date__c</fullName>
    <label>FA/FV Completion Date</label>
    <summarizedField>Serial_Number__c.RMA_Completion_Date__c</summarizedField>
    <summaryForeignKey>Serial_Number__c.Order_Line__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>