src/objects/Order_Line__c/fields/Fabrinet_Gold_Id__c.field-meta.xml
<CustomField>
    <fullName>Fabrinet_Gold_Id__c</fullName>
    <label>Fabrinet Gold Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>