src/objects/Order_Line__c/fields/Factory_Reason__c.field-meta.xml
<CustomField>
    <fullName>Factory_Reason__c</fullName>
    <label>Factory Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>