src/objects/Order_Line__c/fields/Factory_Shippable__c.field-meta.xml
<CustomField>
    <fullName>Factory_Shippable__c</fullName>
    <label>Factory Shippable</label>
    <length>20</length>
    <type>Text</type>
</CustomField>