src/objects/Order_Line__c/fields/FAFV_Status__c.field-meta.xml
<CustomField>
    <fullName>FAFV_Status__c</fullName>
    <formula>IF( Count_of_Serial_s__c &gt; 0, 
		 IF( Count_of_lines_with_Received_Status__c &gt;0 , &apos;Received&apos;, 
			IF( Count_of_lines_with_FV_Status__c &gt;0 ,&apos;Failure Verification&apos;, 
			   IF( Count_of_lines_with_FA_Status__c &gt; 0 , &apos;Failure Analysis&apos;,
				  IF( Count_of_lines_with_2nd_FA_Status__c &gt;0 ,&apos;2nd Failure Analysis&apos;,
				  IF(Count_of_Completed_Serial_s__c =  Count_of_Serial_s__c, &apos;Closed&apos;, &apos;Open&apos;))))), &quot;Closed - No S/Ns&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Line FV/FA Status</label>
    <type>Text</type>
</CustomField>