src/objects/Order_Line__c/fields/Failure_Location__c.field-meta.xml
<CustomField>
    <fullName>Failure_Location__c</fullName>
    <label>Failure Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>