src/objects/Order_Line__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <formula>TEXT(Part_Number__r.Product_Family__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family</label>
    <type>Text</type>
</CustomField>