src/objects/Order_Line__c/fields/Finisar_HRMA_Num__c.field-meta.xml
<CustomField>
    <fullName>Finisar_HRMA_Num__c</fullName>
    <label>Finisar HRMA Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>