src/objects/Order_Line__c/fields/First_Article__c.field-meta.xml
<CustomField>
    <fullName>First_Article__c</fullName>
    <label>First Article</label>
    <length>20</length>
    <type>Text</type>
</CustomField>