src/objects/Order_Line__c/fields/Fob_Terms__c.field-meta.xml
<CustomField>
    <fullName>Fob_Terms__c</fullName>
    <label>Fob Terms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>