src/objects/Order_Line__c/fields/Free_of_Charge__c.field-meta.xml
<CustomField>
    <fullName>Free_of_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free-of-Charge</label>
    <type>Checkbox</type>
</CustomField>