src/objects/Order_Line__c/fields/Freight_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms_Code__c</fullName>
    <label>Freight Terms Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>