src/objects/Order_Line__c/fields/FY_FM__c.field-meta.xml
<CustomField>
    <fullName>FY_FM__c</fullName>
    <label>FY_FM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>