src/objects/Order_Line__c/fields/HROCM_Line__c.field-meta.xml
<CustomField>
    <fullName>HROCM_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HROCM Line</label>
    <type>Checkbox</type>
</CustomField>