src/objects/Order_Line__c/fields/Hub_Type__c.field-meta.xml
<CustomField>
    <fullName>Hub_Type__c</fullName>
    <label>Hub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>