src/objects/Order_Line__c/fields/IsPLMUser__c.field-meta.xml
<CustomField>
    <fullName>IsPLMUser__c</fullName>
    <formula>IF( UPPER($User.Email) ==UPPER(Part_Number__r.Product_PLM_Email__c),True,False)</formula>
    <label>IsPLMUser</label>
    <type>Checkbox</type>
</CustomField>