src/objects/Order_Line__c/fields/Legacy_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Parent_Id__c</fullName>
    <label>Legacy Parent Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>