src/objects/Order_Line__c/fields/Legacy_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Salesforce_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Salesforce Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>