src/objects/Order_Line__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>This is used for Corp II-VI only.</description>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>