src/objects/Order_Line__c/fields/Line_Hold_Comment__c.field-meta.xml
<CustomField>
    <fullName>Line_Hold_Comment__c</fullName>
    <label>Line Hold Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>