src/objects/Order_Line__c/fields/Line_Hold_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Hold_Name__c</fullName>
    <label>Line Hold Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>