src/objects/Order_Line__c/fields/Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Id__c</fullName>
    <label>Line Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>