src/objects/Order_Line__c/fields/Line_Priority__c.field-meta.xml
<CustomField>
    <fullName>Line_Priority__c</fullName>
    <label>Line Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>