src/objects/Order_Line__c/fields/Loaner_Line__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loaner Line</label>
    <referenceTo>Loaner_Line__c</referenceTo>
    <relationshipLabel>Order Lines (Loaner Line)</relationshipLabel>
    <relationshipName>Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>