src/objects/Order_Line__c/fields/Loaner_Line_Line__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Line_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loaner Line/Line#</label>
    <referenceTo>Loaner_Line__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>