src/objects/Order_Line__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>