src/objects/Order_Line__c/fields/Location_No__c.field-meta.xml
<CustomField>
    <fullName>Location_No__c</fullName>
    <formula>Ship_To_Location__r.Location_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ship To Location Number</inlineHelpText>
    <label>Location No</label>
    <type>Text</type>
</CustomField>