src/objects/Order_Line__c/fields/Long_Text_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Text_Description__c</fullName>
    <description>This is used for Corp II-VI only.</description>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>