src/objects/Order_Line__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <label>Lot Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>