src/objects/Order_Line__c/fields/Market_App__c.field-meta.xml
<CustomField>
    <fullName>Market_App__c</fullName>
    <formula>TEXT( Part_Number__r.Mkt_Application__c )</formula>
    <label>Market App</label>
    <type>Text</type>
</CustomField>