src/objects/Order_Line__c/fields/Marketing_Family__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Family__c</fullName>
    <formula>Part_Number__r.Marketing_Family__c</formula>
    <label>Marketing Family</label>
    <type>Text</type>
</CustomField>