src/objects/Order_Line__c/fields/Marketing_Part__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Part__c</fullName>
    <formula>Part_Number__r.Marketing_P_N__c</formula>
    <label>Marketing Part #</label>
    <type>Text</type>
</CustomField>