src/objects/Order_Line__c/fields/NoofFilesAttached__c.field-meta.xml
<CustomField>
    <fullName>NoofFilesAttached__c</fullName>
    <label>No of Files Attached</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>