src/objects/Order_Line__c/fields/Oracle_Order_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Order_Line_Status__c</fullName>
    <label>Oracle Order Line Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>