src/objects/Order_Line__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is the order to which this Line Item is related</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>RMA_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>